--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <a href="hotkeys.html" target="_blank">check the hotkeys</a>
     </div>
     <div class="footer">
-        <a href="https://github.com/silentne1gma/landingpage">make it your own</a>
+        <a href="https://github.com/silentne1gma/home">make it your own</a>
     </div>
     <script src="js/type.js"></script>
     <script src="js/clock.js"></script>
