--- a/hotkeys.html
+++ b/hotkeys.html
@@ -36,9 +36,9 @@
     <div class="misc box">
         <h1>Misc.</h1>
         <p>y -- invidious</p> 
-        <p>alt + m -- mega</p> 
+        <p>a -- mega</p> 
         <p>b -- TPB</p> 
-        <p>1 -- 1337x</p> 
+        <p>h -- 1337x</p> 
     </div>
 </div>
 
