add sites, made comments and more stuff

--- a/hotkeys.html
+++ b/hotkeys.html
@@ -10,36 +10,45 @@
 
       <h1 id='title'>List of hotkeys to use on akham</h1>
 <div class="container">
-    <div class="social box">
-        <h1>social</h1>
-        <p>R -- reddit</p> 
-        <p>t -- /g/</p> 
-        <p>d -- discord</p> 
-        <p>m -- messenger</p> 
-    </div>
-  
-
-    <div class="learn box">
-        <h1>learn</h1>
-        <p>w -- w3school</p> 
-        <p>f -- freecodecamp</p> 
-    </div>
-
     <div class="work box">
         <h1>work</h1>
         <p>g -- github</p> 
-        <p>p -- codepen</p> 
+        <p>p -- protonmail</p> 
         <p>c -- coolors</p> 
         <p>x -- pixlr</p>     
+        <p>l -- linkedin </p>     
+        <p>ctrl + r -- repl.it </p>     
+    </div>
+    
+    <div class="chill box">
+        <h1>chill</h1>
+        <p>9 -- 9anime</p> 
+        <p>y -- yewtube</p> 
+        <p>4-- 4chan</p>  
+        <p>f-- fushaar</p> 
     </div>
 
     <div class="misc box">
-        <h1>Misc.</h1>
-        <p>y -- invidious</p> 
-        <p>a -- mega</p> 
-        <p>b -- TPB</p> 
-        <p>h -- 1337x</p> 
+        <h1>Misc.</h1> 
+        <p>m -- mega</p>
+        <p>w -- weather</p>
+        <p>u -- unitconvert</p>
+        <p>a -- aspose</p> 
+        <p>t -- TPB</p> 
+        <p>1 -- 1337x</p> 
     </div>
+
+    <div class="social box">
+        <h1>social</h1>
+        <p>R -- reddit</p> 
+        <p>ctrl + f -- facebook</p> 
+        <p>d -- discord</p> 
+        <p>ctrl + m -- messenger</p> 
+        <p>ctrl + t -- twitter</p>
+        <p>shift + r -- ruqqus</p>
+    </div>
+
+
 </div>
 
 </body>
