--- a/index.html
+++ b/index.html
@@ -7,40 +7,48 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="title">
-        <h2 id="title">></h2>
-        <span class="curs">|</span>
-    </div>
+
     <div class="clock">
-        <span id="hours">17</span>
-        <span id="minutes">07</span>
-        <span id="seconds">27</span>
+        <span id="hours">hey</span>
+        <span id="minutes">there</span>
+        <span id="seconds"></span>
     </div>
     <div class="sites">
-        <div class="box">
-            <h2 class="box-head">Social</h2>
-            <a href="https://www.reddit.com/" class="links">Reddit</a>
-            <a href="https://4chan.org/g/" class="links">/g/</a>
-            <a href="https://discord.com" class="links">Discord</a>
-            <a href="https://m.me" class="links">Messenger</a>
-        </div>
-        <div class="box">
-            <h2 class="box-head">Learn</h2>
-            <a href="https://www.w3schools.com/" class="links">w3schools</a>
-            <a href="https://www.freecodecamp.org/" class="links">freecodecamp</a>
-        </div>
         <div class="box">
             <h2 class="box-head">Work</h2>
             <a href="https://github.com" class="links">github</a>
             <a href="https://codepen.io/pen" class="links">codepen.io</a>
             <a href="https://coolors.co/" class="links">coolors</a>
             <a href="https://pixlr.com/x/" class="links">PIXLR</a>
-
+            <a href="https://protonmail.com" class="links">pmail</a>
+            <a href="https://www.linkedin.com/" class="links">linkedin</a>
+            <a href="https://repl.it/" class="links">repl.it</a>
         </div>
         <div class="box">
+            <h2 class="box-head">chill</h2>
+            <a href="https://9animes.ru/" class="links">9anime</a>
+            <a href="https://yewtu.be" class="links">yewtube</a>
+            <a href="https://4channel.org" class="links">4channel</a>
+            <a href="https://www.fushaar.com" class="links">fushaar</a>
+        </div>
+
+        <div class="box">
+            <h2 class="box-head">social</h2>
+            <a href="https://www.reddit.com/" class="links">Reddit</a>
+            <a href="https://www.facebook.com" class="links">facebook</a>
+            <a href="https://discord.com" class="links">Discord</a>
+            <a href="https://m.me" class="links">Messenger</a>
+            <a href="https://twitter.com" class="links">twitter</a>
+            <a href="https://ruqqus.com" class="ruqqus">ruqqus</a>
+        </div>  
+
+
+        <div class="box">
             <h2 class="box-head">Misc.</h2>
-            <a href="https://yewtu.be/" class="links">yewtube</a>
-            <a href="https://mega.nz" class="links">mega</a>
+            <a href="https://mega.nz/" class="links">mega</a>
+            <a href="https://www.unitconverters.net/" class="links">unitconverter</a>
+            <a href="https://www.aspose.app/" class="links">bureau work</a>
+            <a href="https://www.wunderground.com/" class="links">weather</a>
             <a href="http://thepiratebay.org/index.html" class="links">TPB</a>
             <a href="https://1337x.to/" class="links">1337x</a>
         </div>
@@ -51,7 +59,6 @@
     <div class="footer">
         <a href="https://github.com/silentne1gma/home">make it your own</a>
     </div>
-    <script src="js/type.js"></script>
     <script src="js/clock.js"></script>
     <script src="js/hotkeys.js"></script>
 </body>
