--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>super doper home page</title>
+    <link rel="shortcut icon" type="image/png" href="home-icon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
