changed the title to akham 'home' in amazigh

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>super doper home page</title>
+    <title>akham</title>
     <link rel="shortcut icon" type="image/png" href="home-icon.png">
     <link rel="stylesheet" href="css/style.css">
 </head>
